Start on troubleshooting content

--- a/docs/alkiln/security.mdx
+++ b/docs/alkiln/security.mdx
@@ -335,7 +335,7 @@ If you're not worried about keeping the information secure, you don't have to us
 ```
 
 ALKiln will still avoid printing this value and avoid taking screenshots when it is used. There is no way ALKiln can tell which environment variables have sensitive information and which ones are safe.
- -->
+-->
 
 Your workflow file code will end up including something like the below:
 
@@ -358,7 +358,7 @@ We recommend that you start your environment variable names with "ALKILN_". That
 
 <SecureEnvVars/>
 
-Right now Story Tables are unable to use environment variables to set variables.
+Right now Story Tables are unable to use environment variables to fill in fields.
 
 
 <!-- TODO: Move this to writing_tests.mdx #env-vars -->
@@ -366,7 +366,7 @@ Right now Story Tables are unable to use environment variables to set variables.
 [^org_secrets]: [GitHub organization secrets](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-an-organization) can be useful if an organization wants to create a variable that all of its repositories will be able to use and avoid creating that secret in every individual repository.
 
 
-### How to use sensitive information in <AutoDIY/> tests {#sensitive-info-diy}
+### How to use sensitive data in <AutoDIY/> tests {#sensitive-info-diy}
 
 **This is for:** <AutoDIY/> tests
 
