--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -6,56 +6,64 @@ slug: /alkiln/trouble
 ---
 
 import { GTOYS, AutoDIY, KittyLitter } from './components/\_test_types.js';
+import TypoShameIsReal from './components/\_typo_shame_is_real.md'
 
 :::warning
 WIP (Work in progress)
 :::
 
-This page will try to help you figure out what is going wrong when you have errors, warnings, or other problems with your ALKiln tests. This document is still under development and contains only some of the possible errors.
+This page will try to help you figure out what is going wrong when you have errors, warnings, or other problems with your ALKiln tests, whether they are from ALKiln itself or from the libraries ALKiln uses.
+
+Maybe you made a mistake, maybe there is a bug in our code, in docassemble, or in a package our tools depend on. Coding is 99% errors and debugging and the pain you feel is real and shared by many. Whatever the source of the problem is, you have made it this far, you belong in this space, and we are excited to have you here.
+
+This document is just starting out and would love contributions!
 
 This page helps with:
 
-- Common mistakes
+- General debugging techniques
+- Common developer mistakes
 - ALKiln errors and warnings
-- Errors from the third-party libraries that ALKiln uses
-<!-- - ALKiln errors and error and warning codes -->
-
-
-
-<!-- Every ALKiln error and warning should have a code, though, and giving us that code can help us narrow down your problem. -->
+- Docassemble errors and warnings
+- Errors and warnings from the third-party libraries that ALKiln uses
 
 <!--
+- ALKiln errors and error and warning codes
+-->
+
+<!-- TODO: Every ALKiln error and warning should have a code, though, and giving us that code can help us narrow down your problem. -->
+
+
 ## Failing tests {#failure}
 
-Check report
-Check screenshots/pics
-Check HTML
-Check bottom of test output (for cucumber info)
-Go through the interview manually. Make sure to pull in a fresh new Project.
- -->
+There are some general troubleshooting steps that you can take when tests fail. If any of these steps help you find more specific problems, look for those on this page too because they may help you get to your solution faster.
 
-<!--
-## The variable could not be looked up
+- Check the [console logs](writing_tests.mdx#console) of the test run. Remember that sometimes the errors will be near the top of the logs or near the bottom.
+- Check the [test run report](writing_tests.mdx#report).
+- Check [error screenshots/pictures and HTML pages](writing_tests.mdx#error-pics).
 
-> There was a reference to a variable ‘some_var’ that could not be looked up in the question file (for language ‘en’) or in any of the files incorporated by reference into the question file.
- -->
+If you are unsure if the test is acting correctly, go to your docassemble server, create a new Project, pull the code of your package into the Project, and go through the interview manually. Use the failing test as a guide and follow its Steps exactly.
 
-## Debugging syntax errors {#gherkin}
 
-WIP
+## Test file bugs {#gherkin}
 
-TODO: Link to Gherkin section.
+There are some errors that come up because of various issues in your [test files](writing_tests.mdx#test-files).
 
 To troubleshoot syntax typos, you can use an editor like the [editor at AssertThat](https://www.assertthat.com/online-gherkin-editor). It will let you paste in your test code and will show a red 'x' next to the lines that have syntax errors.
 
-Example syntax typo errors:
-
-- [Inconsistent cell count](#table-cells)
+You also might have a [typo in a Step itself](#step-undefined).
 
 
-## Everything works fine when I run the test manually {#manual-works}
+### Inconsistent cell count error {#table-cells}
 
-Or "It works when I run the interview manually" or "The tests pass when I run them with <AutoDIY/> tests".
+This error prevents all of your tests being run. The message is telling you that something about the syntax of the table is wrong. One of your story tables could missing a pipe (`|`) or could have an extra pipe, etc. This is an error from a library ALKiln uses.
+
+To fix this you can find the syntax typos by using an editor like the [editor at AssertThat](https://www.assertthat.com/online-gherkin-editor). It will let you paste in your test code and will show a red 'x' next to the lines that have syntax errors.
+
+The error message will include text similar to this:
+
+```bash
+Error: Parse error in 'docassemble/ChildSupport/data/sources/new_case.feature': (10:5): inconsistent cell count within the table
+```
 
 
 ### Undefined step {#step-undefined}
@@ -64,6 +72,8 @@ Or "It works when I run the interview manually" or "The tests pass when I run th
 
 At the very bottom of your [console output](writing_tests.mdx#console) you see the message "Undefined" and "You can implement missing steps with the snippets below".
 
+This is an error message from a library ALKiln uses called cucumber.
+
 **Problem:**
 
 You have a typo in the Step that failed. The error message should contain the text of the Step.
@@ -71,21 +81,82 @@ You have a typo in the Step that failed. The error message should contain the te
 **Solution:**
 
 1. Check the documentation for the Step again.
-1. Copy/paste the Step from the documentation, then copy/paste just the parts you need to customize.
-1. To double-check that there is a difference between the old version of the Step and the new one, use a diff checker like [https://www.diffchecker.com/text-compare/](https://www.diffchecker.com/text-compare/).
-1. If the diff checker shows that the text is the same, contact us. Maybe we have a typo in our documentation.
-1. If the text is different, try the test again.
+1. Copy/paste the Step from the documentation into a new line in your test.
+1. If you need to fill in blanks in the Step, copy/paste those values from your existing test code.
+1. If you want to be helpful to us, you can check if there really was a typo. If the text of the two lines look the same visually, use a diff checker like [https://www.diffchecker.com/text-compare/](https://www.diffchecker.com/text-compare/) to compare your original Step text with the new Step text. If the diff checker shows that the text is the same, contact us. Maybe we have a typo in our documentation.
+1. Delete your original Step text and try the test again.
 1. If the test has the same problem, contact us. Maybe we have a typo in our documentation.
 
 
-### Error: File not found {#file-not-found}
+<!-- ## Access Denied -->
+
+<!--
+## ALKiln was unable to continue to the next page
+-->
+
+<!-- writing_tests.mdx#error-pics, writing_tests.mdx#reports -->
+
+
+## UnhandledPromiseRejection error
+
+This is a misleading error from a library ALKiln uses that is hiding the real error message inside it. You need to read the text of the whole paragraph to see what the actual error is.
+
+
+## Everything works fine when I run the test manually {#works-manually}
+
+When your ALKlin tests fail, but your interviews work fine when you run them by hand, it is possible that something is wrong with your package, with the test, or possibly with your understanding of the test code or interview code.
+
+For example, maybe when you run the interview manually, field by field, you *think* you are following your test to the letter, but a [misunderstanding of how to set a variable](writing_tests.mdx#values) has led you in the wrong direction.
+
+Some of the common reasons for specifically this problem are under this heading. That is especially true for tests that fail on GitHub, but pass manually *and* with <AutoDIY/> tests. Some problems are more complex and might be happening for other reasons, so they are elsewhere in these docs. For example, when your tests pass manually, you may have a [missing variable from a test typo](#var-val).
+
+
+### Uncommitted files {#uncommitted}
+
+Sometimes we forget to include/select a file on our [Project's Packages page](https://docassemble.org/docs/playground.html#packages) before [committing to GitHub](https://docassemble.org/docs/development.html#versioncontrol). This might be an interview file, template file, static file, source file, or a module.
+
+Leaving this out can lead to problems like a [file not being found](#file-not-found) or an [invalid playground path](#invalid-path).
+
+<!-- TODO: Add pics? Link to docassemble? -->
+
+
+### File not found {#file-not-found}
 
 <!-- Find that error -->
 
 This might mean that you have a file in your Playground Project, but that you still have to save it on the Project's Packages page and commit that to GitHub. Your tests will pass for that Project in your Playground, but your interview will break when you or others install it from GitHub.
 
 
-### Error: Variable could not be looked up {#variable-not-found}
+### Invalid playground path {#invalid-path}
+
+If you see the text "invalid playground path" in the report, that means the `Given I start the interview at...` Step for that scenario is naming an interview that doesn't exist. Check for a typo in your interview name and check that the file exists.
+
+See [uncommitted files](#uncommitted).
+
+
+<!--
+### Package dependency missing {#missing-dependency}
+
+TODO: Check docker error when dependency is not installed in sandbox tests
+-->
+
+
+## ALKiln could not find a field or value {#missing}
+
+Some possible causes:
+
+1. You have changed your code to remove a variable or value and have not yet updated your tests.
+
+Look at the error message closely. Look at the [picture and HTML of the error page](#writing_tests.mdx#error-pics). Try to find the variable or value in your interview code or in the code of included or imported files. See if that variable or value is also in your test file.
+
+2. The field is hidden behind a `show if` of some kind.
+
+Follow the above steps first. Then check if the field is hidden. If it is hidden, try to see what can make that field visible. Whatever variable and value reveals that answer, check for those in your interview file and in your test code.
+
+3. There might be a typo in your test. Reading the [section about test typos](#var-val) might help.
+
+
+## Docassemble: Variable could not be looked up {#variable-not-found}
 
 <!-- TODO: Actually, usually shows up as ALKiln couldn't find a field -->
 
@@ -104,59 +175,35 @@ fields:
 
 **Symptom:**
 
-On the error screenshot of the page, you see the error message you see this error:
+On the picture of the page with the error, you see this error message:
 
 > There was a reference to a variable ‘some_var’ that could not be looked up in the question file (for language ‘en’) or in any of the files incorporated by reference into the question file.
 
+This is a "reference error".
+
 **Problem:**
 
-This is a reference error. It means docassemble tried to get the definition for a variable, but couldn't find the variable anywhere in your code or in the code you included or imported.
+This is a reference error. It means docassemble tried to get the value for a variable, but could not find where you defined the variable anywhere in your code or in the code you included or imported. Possible causes:
 
-Sometime the easiest way to see what is wrong is to run the interview manually. Fill in the same values as the test fills in. You can then see what goes wrong when you reach the error.
+- It may be that you have not defined a variable in your interview or that you have not defined it in a way that docassemble can find it. That can be for many reasons. For example, maybe you are using an [index variable](https://docassemble.org/docs/fields.html#index%20variables) or a [generic object](https://docassemble.org/docs/fields.html#generic) incorrectly or maybe you accidentally deleted the block where you were defining the variable.
+- It may be that you have a typo either where you use the variable or where you define the variable. The typo may be in the value instead.
+- It may be that you have a typo in a [variable name or value](#var-val) in your test.
+- It may be that you are [setting the value incorrectly](writing_tests.mdx#values) in your test. [Checkboxes are especially complex fields to set](writing_tests.mdx#checkboxes).
 
-If running the test manually seems to work fine, but running the automated tests gets a reference error, the test probably either has an incorrect variable name or an incorrect value for a variable. It might even be a value from a page much farther back than you expect.
+The mistake may have happened on a page much farther back than you expect with a field ALKiln [skipped](writing_tests.mdx#unused-rows).
 
-If you have a typo, ALKiln will be unable to find the variable or value that you were trying to set. In some Steps, that will cause a test to fail immediately. In a [Story Table Step](#story-table), ALKiln will just skip optional fields.
+**Debugging:**
 
-[Checkboxes](#checkboxes) are a common place where authors make mistakes.
+Sometime the easiest way to see what is wrong is to run the interview manually. Fill in the same values as the test fills in. You can then see what goes wrong when you reach the page with the error.
 
-**Solution:**
+If the mistake is in your interview code, you can fix that bug. If your interview code is fine, you might have to troubleshoot [a typo in your test code](#var-val).
 
-Check for:
-
-- [Incorrectly setting checkbox values](writing_tests.mdx#checkboxes)
-- Typos in variable names
-- Typos in the value for radio button options or similar fields
-
-You can check for incorrect variable or value names in a few different ways.
-
-1. If you give every question in your interview an id, the report can help show you where the test failed or where ALKiln skipped setting variables. For each test, the report often has a list of question ids. For each question id, the report has a list of variables that ALKiln set on the page. If the test failed, you can see what question id the test got to. You can also check previous questions to see what variables are missing from each of those pages - what fields ALKiln skipped.
-1. It is more annoying, but in most cases[^except] you can copy the variable name from your test and search for it in your interview code. You can do the same for values of multiple choice questions.
-1. Alternatively, in most cases[^except] you can go through the interview manually. For every single page  (even if you think this page has nothing to do with the problem), click on the `<\/>` in the nav bar to see the source of the page. Copy the name of the variable from your test and search for it on the page of the running interview. For multiple choice questions, do the same for the value. Then answer the questions _exactly_ as the test would answer them.
-1. If you are unable to find the name of the variable or value in any other way, our last suggestion is the hardest to do, but most reliable - run the interview manually and examine each page's HTML to find exact names. This is complex and we are happy to show you how to do this. Here is a refresher:
-    1. Go to a new page.
-    1. Click on the `<\/>` in the nav bar to see the source of the page.
-    1. For every field in the page:
-        1. If you cannot see the variable name or value, like for an `object_checkbox` field or a field created with `code`:
-            1. Open the browser development tools.
-            1. Examine the DOM of a field to find the encoded name of the variable.
-            1. Use `atob('the encoded name or id')` with the encoded name or id to fully decode every part of the variable name. You may have to decode multiple times.
-            1. From those decoded values, put together the variable name that you need to use. <!-- Something about nested double quotes and single quotes? -->
-        1. Copy the variable name and use your editor to search for that exact variable name in your test file. The variable name is the fully decoded and reconstructed variable name.
-        1. In the final variable name, replace `x`, `i`, `j`, etc. with their actual values on that page.
-        1. If the field is a multiple choice field like radio buttons, do the same for the value and use your editor to search for that exact value in your test file. Make sure it appears along with the correct variable name. For a checkbox field, the value is either `True` or `False`.
-        1. Set the value exactly as the test would have set it.
-    1. Go on to the next page till you reach the end of your interview or the error.
-
-<!-- Check new notes for getting decoding values and see if there are easier instructions for getting HTML values -->
+<TypoShameIsReal/>
 
 
-[^except]: In some cases, you will be unable to find a variable or value name in your interview code. For example, `object`-type fields, like `object_multiselect` or for fields that use `code` might use values that are outside of your interview code. They might be in a module of your interview, in a module of an interview you `include`, in a database like S3, or somewhere else.
+## Skipped rows or variables {#skipped}
 
-
-## Skipped variables {#skipped}
-
-If you look in a test report and see that ALKiln skipped setting a variable, you probably have a typo. See the [error for a missing variable reference](#variable-not-found)
+If you look in a [test suite report](writing_tests.mdx#report) and see that ALKiln [skipped setting a variable](writing_tests.mdx#unused-rows), your test might have a [missing field or value](#missing).
 
 <!--
 ## Not setting variables
@@ -172,7 +219,7 @@ WIP
 Same var or vars set over and over again and never stop.
 
 A page that has no invalidation message and yet is unable to move on.
- -->
+-->
 
 <!--
 ## Timing out
@@ -200,19 +247,53 @@ Not all collapsed elements are being expanded - wait for each element to be expa
 -->
 
 <!--
-## Some file names have the word null in them
+## Some test file names have the word null in them
 
-Maybe "Some JSON files aren't being saved with the "save variables" (writing#save-vars) or "compare json" (writing#compare-json) Steps" - check on JSON file names to make sure they have a timestamp
+Maybe "Some JSON files aren't being saved with the "save variables" (writing#save-vars) or "compare json" (writing#compare-json) Steps" - check on JSON file names to make sure they have a timestamp.
 
-Make sure every question block you create has an id
+Make sure every question block you create has an id (link to FAQ)
 -->
+
+## Wrong variable or value {#var-val}
+
+Unfortunately, test code can be tricky to get right. You might have a simple typo or you might have a perfectly normal misunderstanding of [how to write variable names and values](writing_tests.mdx#values).
+
+<TypoShameIsReal/>
+
+You can check your test code for incorrect variable or value names in a few different ways.
+
+<!-- Check new notes for getting decoding values and see if there are easier instructions for getting HTML values -->
+
+1. If you give every question in your interview an id, the [report](writing_tests.mdx#report) can help show you where the test failed or where ALKiln skipped setting variables. For each test, the report often has a list of question ids. For each question id, the report has a list of variables that ALKiln set on the page that had the error. If the test failed, you can see what question id the test got to. You can also check previous questions to see what variables are missing from each of those pages - what [fields ALKiln skipped](writing_tests.mdx#unused-rows).
+1. It is more annoying, but in most cases[^except] you can copy the variable name from your test and search for it in your interview code. You can do the same for values of multiple choice questions.
+1. Alternatively, in most cases[^except] you can go through the interview manually, but follow this procedure:
+   1. For every single page  (even if you think this page has nothing to do with the problem), click on the `<\/>` in the nav bar to see the source of the page.
+   1. Copy the name of the variable from your test and search for it on the page of the running interview.
+   1. For multiple choice questions, do the same for the value.
+   1. Use those values to answer the questions _exactly_ as the test would answer them.
+   1. Continue doing this till you find the problem.
+1. If you are unable to find the name of the variable or value in any other way, our last suggestion is the hardest to do, but most reliable - run the interview manually and examine each page's HTML to find exact names. This is complex and we are happy to show you how to do this. Here is a refresher:
+    1. Go to a new page.
+    1. Click on the `<\/>` in the nav bar to see the source of the page.
+    1. For every field in the page:
+        1. If you cannot see the variable name or value, like for an `object_checkbox` field or a field created with `code`:
+            1. Open the browser development tools.
+            1. Examine the DOM of a field to find the encoded name of the variable.
+            1. Use `atob('the encoded name or id')` with the encoded name or id to fully decode every part of the variable name. You may have to decode multiple times.
+            1. From those decoded values, put together the variable name that you need to use. <!-- Something about nested double quotes and single quotes? -->
+        1. Copy the variable name and use your editor to search for that exact variable name in your test file. The variable name is the fully decoded and reconstructed variable name.
+        1. In the final variable name, replace `x`, `i`, `j`, etc. with their actual values on that page.
+        1. If the field is a multiple choice field like radio buttons, do the same for the value and use your editor to search for that exact value in your test file. Make sure it appears along with the correct variable name. For a checkbox field, the value is either `True` or `False`.
+        1. Set the value exactly as the test would have set it.
+    1. Go on to the next page till you reach the end of your interview or the error.
+
+
+[^except]: In some cases, you will be unable to find a variable or value name in your interview code. For example, `object`-type fields, like `object_multiselect` or for fields that use `code` might use values that are outside of your interview code. They might be in a module of your interview, in a module of an interview you `include`, in a database like S3, or somewhere else.
 
 
 ## Phrase is missing {#missing-phrase}
 
-<!-- TODO: when there are error codes: Error code ALK0?? -->
-
-WIP
+**Symptom**
 
 Example error:
 
@@ -220,29 +301,17 @@ Example error:
 The text "a document called a 'Certified docket sheet'" SHOULD be on this page, but it's NOT
 ```
 
-
-### Typo
-
-WIP
-
-1. Regular typo
-
-
-### Quotes and other catastrophes {#da-converted-text}
-
-WIP
-
 **Problem**
 
-Even though the text might look correct, you might not have used exactly characters the user is seeing. Docassemble sometimes shows the user slightly different characters than the ones you typed in your code.
+**Debugging**
 
-**Solution**
+First, look over the [HTML of the page that had the error](writing_tests.mdx#error-pics) and see what your test is seeing.
 
-Run the interview[^faster] until the page that has the text. Use your cursor to select the text you want to test. Copy and paste that text into your test.
+If your phrase is missing there, try running the interview manually and see if it works. If it does, check the section on [interviews that work when you run them manually](#works-manually).
 
-**What is going on?**
+If it looks like the phrase is actually there, a diff checker can be your best friend. Use a diff checker like [https://www.diffchecker.com/text-compare/](https://www.diffchecker.com/text-compare/) to copy/paste both the page's text and your test's text to check for differences. If the tool shows you differences, you can copy/paste the page's text into your test.
 
-When you tell the test to look for a phrase on a page, you have to give it the exact characters that are on the page the user sees. That is, ignore the text that you wrote in your code.
+Even though the text might look correct to you visually and might be the same ones you put in your code, you might not have used the exact same characters that the user is seeing. Docassemble sometimes gives the user slightly different characters than the ones you typed in your code. Ignore the text that you wrote in your code.
 
 See a section in [tips about quotes](writing_tests.mdx#special-chars) for more detailed information. To sum up, it is best to copy/paste the text **straight from the screen the user sees**.
 
@@ -259,20 +328,7 @@ See a section in [tips about quotes](writing_tests.mdx#special-chars) for more d
 :::
 
 
-[^faster]: To speed things up, you might instead be able to use the HTML page that the report created for you. It is in the folder with the name of the Scenario for that test.
-
-
-<!-- ## There are no artifacts, files, or folders
-
-The tests completely failed to run. For this, it is especially important to look at the console output and error messages. In GitHub, those might be above where the tests even run.
-
-There might be a typo in a test (link). For <KittyLitter> tests, the docker container might not have started up correctly. Maybe your server was down. Maybe the API key you gave ALKiln was wrong or got deleted with a server restart. That might be because of your own errors or because of GitHub.
-
-Also, other services like GitHub or node package manager (npm) might have been having various kinds of trouble.
--->
-
-
-## Timeout or "it took too long to load the next page" error {#next-page-timeout}
+## Timeout or "it took too long to load the next page" {#next-page-timeout}
 
 Different problems can cause the report to say that something "took too long" or caused a "timeout" error.
 
@@ -298,53 +354,41 @@ If the server might have been busy or down, try [re-running the tests](https://d
 You won't be able to tell if the `SERVER_URL` is wrong - GitHub considers the value of the secret to be sensitive information, so it's impossible to see that value. You can still give it a new value, though, and that's worth trying. Find the address of the docassemble server where the docassemble testing account is located. Edit the secret to give it that url.
 
 
-## Invalid playground path error
-
-If you see the text "invalid playground path" in the report, that means the `Given I start the interview at...` Step for that scenario is naming an interview that doesn't exist. Check for a typo.
-
-
-## UnhandledPromiseRejection error
-
-This is a misleading error from a third-party library that is hiding our error message inside it. You need to read the text of the whole paragraph to see what the actual error is.
-
-
-## Inconsistent cell count error {#table-cells}
-
-This error prevents all of your tests being run. The message is telling you that something about the syntax of the table is wrong. One of your story tables could missing a pipe (`|`) or could have an extra pipe, etc.
-
-To fix this you can find the syntax typos by using an editor like the [editor at AssertThat](https://www.assertthat.com/online-gherkin-editor). It will let you paste in your test code and will show a red 'x' next to the lines that have syntax errors.
-
-The error message will include text similar to this:
-
-```bash
-Error: Parse error in 'docassemble/ChildSupport/data/sources/new_case.feature': (10:5): inconsistent cell count within the table
-```
-
-<!-- ## Access Denied -->
-
-<!--
-    required file was missing
-    ALKiln was unable to continue to the next page,
-    missing phrase
--->
-
-<!-- writing_tests.mdx#error-pics, writing_tests.mdx#reports -->
-
 ## No artifacts {#no-artifacts}
 
-WIP
+If ALKiln is missing all [artifacts](writing_tests.mdx#artifacts) by the end of the test run, it means none of the tests ran. There are possible several reasons for this.
 
-For all tests, maybe:
+Possible reasons for missing artifacts for any test:
 
-- ALKiln's third-party libraries were unavailable
-- Your server reloaded
+- You might have a gherkin syntax error somewhere in your test files. If this was the case, the setup should have completed and the test run should have started, but immediately failed. [Find and fix that syntax error](#gherkin).
 
-For GitHub tests:
+Possible reasons for missing artifacts for <GTOYS/> tests:
 
-<!-- TODO: Link to "developer account" account for testing description -->
-- Your docassemble developer account credentials were invalid. Maybe they got deleted in an update. Maybe someone else changed them. You need a new API key for that developer account.
-- Your test server was unavailable
-- GitHub itself had a problem
+<!-- TODO: Add a pic of GitHub tests failing because the server is down. -->
+
+- Your test server was unavailable. If this was the case, your [GitHub job logs](writing_tests.mdx#console) should show that the test setup failed. Check if the server is running now and run the tests again.
+- Your docassemble developer account credentials were invalid. That is, the API key you created for the [docassemble testing account](security.mdx#test-accounts) and put in the [`DOCASSEMBLE_DEVELOPER_API_KEY` GitHub input](writing_tests.mdx#workflow-inputs) may no longer exist. Maybe the API key got deleted in a docassemble server update. Maybe someone else changed it. You should create a new API key for that testing account and change the value of your `DOCASSEMBLE_DEVELOPER_API_KEY` secret to the new value. You could also create a new testing account and create a new API key for the new account.
+
+<!-- TODO: Put the long explanation above in the "Access Denied" section and link to that from here. Create a section in setup about creating that docassemble account and API key and link to that too. -->
+
+Possible reasons for missing artifacts for <KittyLitter/> tests:
+
+- The Docker container is having trouble starting up.  If this was the case, your [GitHub job logs](writing_tests.mdx#console) should show that the docker build step failed.
+
+Possible reasons for missing artifacts for <GTOYS/> and <KittyLitter/> tests:
+
+- The package manager that installs ALKiln had a problem. This does happen every now and then. If this was the case, your [GitHub job logs](writing_tests.mdx#console) should show test setup failure. You can [check its status](https://status.npmjs.org/), but the problem would have to be happening for a lot of people at once for it to show up.
+- GitHub itself had a problem. This is pretty rare. It can cause a failure at any point in the test. You can [check GitHub's status](https://www.githubstatus.com/). Again, the problem would have to be happening to a lot of people at once for it to show up on that site.
+
+
+<!-- ## There are no artifacts, files, or folders
+
+The tests completely failed to run. For this, it is especially important to look at the console output and error messages. In GitHub, those might be above where the tests even run.
+
+There might be a typo in a test (link). For <KittyLitter> tests, the docker container might not have started up correctly. Maybe your server was down. Maybe the API key you gave ALKiln was wrong or got deleted with a server restart. That might be because of your own errors or because of GitHub.
+
+Also, other services like GitHub or node package manager (npm) might have been having various kinds of trouble.
+-->
 
 
 <!--
@@ -392,9 +436,40 @@ Different versions of ALKiln actions (check `uses`)
 
 WIP
 
-One reason for slow <GTOYS/> tests are server reloads.
+<!-- This is different than a never-ending test/infinite loop where there was no validation error, but the test can't move past the page. -->
 
-This is different than infinite tests.
+**This is for:** Everyone
+
+There are a few different reasons your tests could be slow.
+
+1. Failing tests can make your tests slower. Each failing test gets re-run once, so that can double the amount of time that tests take.
+2. If your server reloads a lot during <GTOYS/> tests, it will take longer for tests to finish because the tests try to wait for the server to be available to avoid ["flaky"](#flake) tests. Your server can reload for many reasons. For example, saving your config file, saving a python module, or pulling a package that uses a python module can all cause your server to reload.
+3. Some types of failing tests take an even longer time to fail. That is because some kinds of failures look the same to ALKiln as a docassemble server reloading. This is true even for <KittyLitter/> tests where the server is very unlikely to reload - ALKiln still treats those failures the same way.
+
+Like a normal user, an ALKiln test can get a server timeout error when the server reloads, which will cause the test to fail part-way through. This is a useless failure because it is just a ["flaky"](#flake) test and tells you, the developer, nothing about your actual code. ALKiln wants to wait so that the test retry and next tests will have a better chance of finishing properly.
+
+By default, ALKiln gives the server 150 seconds to reload. When ALKiln is wrong about a reload, ALKiln ends up waiting the full 150 seconds before moving on to the next test.
+
+You can speed this up by decreasing the [`SERVER_RELOAD_TIMEOUT_SECONDS` input](writing_tests.mdx#githubNyou-optional-inputs) value. With <KittyLitter/> tests, that might be worth it. With other types of tests, it means that your server will get less time to reload if it really *does* need to, leading to flakier tests. You must make the decision based on what you know about your server.
+
+4. Your pages may just be taking a long time to load. This might happen if you are building a large document, uploading a large document, or for other reasons. There is no way to speed this up with ALKiln. There are some things you can do to speed up some kinds of processes on your server, but that is out of scope for this document.
+5. [Downloading a lot of documents](writing_tests.mdx#download) can take a while. Right now, ALKiln is unable to tell when a document is done downloading, so it gives every document the maximum time possible. By default, that is a full 60 seconds. You can decrease that time with the ["max seconds" Step](writing_tests.mdx#custom-timeout), but that time might be too short for the documents to download. You can experiment a bit. You can also be tricky with the "max seconds" Step, though, and increase and decrease the value at appropriate times to improve both speed and downloading.
+
+
+## Flaky tests {#flake}
+
+**This is for:** Everyone
+
+"Flake" happens when your tests fail for reasons that have nothing to do with your interview or test code. There can be many causes for flaky tests. For example:
+
+- Your server reloading during <GTOYS/> tests could make it impossible for your tests to reach your interview webpage. You just have to re-run those tests.
+- A slow-loading interview page might make ALKiln think your server is unavailable. That can happen for different reasons. For example, a large document might be taking a long time to load. You might be able to avoid this failure by increasing the maximum wait time with the ["max seconds" Step](writing_tests.mdx#custom-timeout). That can make tests [slower](#slow). You can be tricky about it, though. If you just increase that value for one Step and then reduce it again, that can avoid slowing down your tests too much.
+- Tapping on an element might show content and move other elements around. ALKiln might fail to click on the elements that are moving. You can use the ["wait" Step](writing_tests.mdx#wait) to give elements more time to finish moving.
+- Third-party services, like GitHub or package managers, that the tests rely on do have problems every now and then. You just have to re-run those tests.
+- An interview page rendering slowly can hide a field that ALKiln is trying to fill in. If we find that there is a particular type of field that is particularly slow to load, we can slow down ALKiln for that type of field, but that is the most ALKiln can do.
+
+<KittyLitter/> test have the best chance of avoiding flakiness because they get their own dedicated server, but even they can flake out sometimes.
+
 
 <!--
 Slow tests
